2011-06-02  Paul Eggert  <eggert@cs.ucla.edu>

	* fileio.c (Fverify_visited_file_modtime): Avoid time overflow
	if b->modtime has its maximal value.

	* dired.c (Ffile_attributes): Don't assume EMACS_INT has >32 bits.

	* lisp.h: Include <intprops.h>, as it'll useful in later changes.
	* character.c, data.c, editfns.c, insdel.c, intervals.c:
	Don't include <intprops.h>, since lisp.h does.

	Don't assume time_t can fit into int.
	* buffer.h (struct buffer.modtime): Now time_t, not int.
	* fileio.c (Fvisited_file_modtime): No need for time_t cast now.
	* undo.c (Fprimitive_undo): Use time_t, not int, for time_t value.

	Minor fixes for signed vs unsigned integers.
	* character.h (MAYBE_UNIFY_CHAR):
	* charset.c (maybe_unify_char):
	* keyboard.c (read_char, reorder_modifiers):
	XINT -> XFASTINT, since the integer must be nonnegative.
	* ftfont.c (ftfont_spec_pattern):
	* keymap.c (access_keymap, silly_event_symbol_error):
	XUINT -> XFASTINT, since the integer must be nonnegative.
	(Fsingle_key_description, preferred_sequence_p): XUINT -> XINT,
	since it makes no difference and we prefer signed.
	* keyboard.c (record_char): Use XUINT when all the neighbors do.
	(access_keymap): NATNUMP -> INTEGERP, since the integer must be
	nonnegative.

2011-06-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Make it possible to build with GCC-4.6+ -O2 -flto.

	* emacs.c (__malloc_initialize_hook): Mark as EXTERNALLY_VISIBLE.

2011-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuf.c (get_minibuffer, read_minibuf_unwind):
	Call minibuffer-inactive-mode.

2011-05-31  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/data.$(O), $(BLD)/editfns.$(O)):
	Update dependencies.

2011-05-31  Dan Nicolaescu  <dann@ics.uci.edu>

	* data.c (init_data): Remove code for UTS, this system is not
	supported anymore.

2011-05-31  Dan Nicolaescu  <dann@ics.uci.edu>

	Don't force ./temacs to start in terminal mode.

	* frame.c (make_initial_frame): Initialize faces in all cases, not